# cpp-boiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  demo.cpp  install.sh
include/: lite_logger.h
src/: lite_logger.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
